--- a/practice/practice.vcxproj.filters
+++ b/practice/practice.vcxproj.filters
@@ -26,7 +26,7 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="practice.cpp">
+    <ClCompile Include="dfs.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
